[package]
name = "netty"
description = "netty - wip"
version = "0.0.0"
edition = "2021"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
repository = "https://github.com/jannik4/netty"
license = "MIT OR Apache-2.0"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:bincode"]
bevy = ["dep:bevy_ecs"]

[dependencies]
thiserror = "1.0.49"
crossbeam-channel = "0.5.8"
bytes = "1.5.0"
tinyvec = "1.6.0"
uuid = { version = "1.5.0", features = ["v4"] }
double_key_map = { git = "https://github.com/jannik4/double_key_map", rev = "615348103081996d082edb6601d5e6e8367ce2cc" }

serde = { version = "1.0.188", optional = true }
bincode = { version = "1.3.3", optional = true }

bevy_ecs = { version = "0.12.0", optional = true, default-features = false }

[dev-dependencies]
serde = { version = "1.0.188", features = ["derive"] }
