[package]
name = "webtransport_web_sys"
version = "0.1.0"
edition = "2021"

[features]
# Requires `RUSTFLAGS="--cfg=web_sys_unstable_apis"`
web_sys_unstable_apis = []

[dependencies]
web-sys = { version = "0.3.68", features = [
    "WebTransport",
    "WebTransportOptions",
    "WebTransportBidirectionalStream",
    "WebTransportReceiveStream",
    "WebTransportSendStream",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "WritableStream",
    "WritableStreamDefaultWriter",
] }
js-sys = "0.3.68"
wasm-bindgen-futures = "0.4.41"
tokio = { version = "1.36.0", default-features = false }
send_wrapper = "0.6.0"
